[list] fix: lists position next to atomic blocks with alignment

--- a/examples/main/shared/theme/rich-content-editor.theme.scss
+++ b/examples/main/shared/theme/rich-content-editor.theme.scss
@@ -24,10 +24,6 @@
 
 .headerThree {}
 
-.orderedList {}
-
-.unorderedList {}
-
 .code {}
 
 .codeBlock {}
