--- a/packages/viewer/web/statics/rich-content-viewer.scss
+++ b/packages/viewer/web/statics/rich-content-viewer.scss
@@ -161,34 +161,6 @@
   min-height: $headerThreeHeight;
 }
 
-.orderedList {
-  composes: elementSpacing;
-}
-
-.orderedListContainer {
-  outline: none;
-  padding: 0;
-  margin: 0;
-
-  [dir] & > * {
-    margin-inline-start: 40px;
-  }
-}
-
-.unorderedList {
-  composes: elementSpacing;
-}
-
-.unorderedListContainer {
-  outline: none;
-  padding: 0;
-  margin: 0;
-
-  [dir] & > * {
-    margin-inline-start: 40px;
-  }
-}
-
 .code,
 .codeBlock {
   composes: blockStyleSpacing;
